@@ -1,6 +1,6 @@
 <driver id="driver/lxm3200-tweaked">
  <name>lxm3200</name>
- <url>http://www.distantvoices.org/</url>
+ <url>http://www.linuxprinting.org/download/printing/</url>
  <execution>
   <ghostscript />
   <prototype>gs -q -dBATCH -dPARANOIDSAFER -dQUIET -dNOPAUSE -sDEVICE=lxm3200%A%Z -sOutputFile=- -</prototype>
@@ -60,6 +60,10 @@
     &quot;&lt;tt&gt;-dmodel=&lt;/tt&gt;&lt;i&gt;n&lt;/i&gt;&quot;
     option, the driver behaves as the original &quot;lxm3200&quot;
     driver.&lt;p&gt;
+
+    Alternative download place (probably not the newest version):
+    &lt;a
+    href=&quot;http://www.distantvoices.org/&quot;&gt;http://www.distantvoices.org/&lt;/a&gt;
 
   </en>
  </comments>
