@@ -1,3 +1,7 @@
+2003-04-08  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* db/source/driver/lxm3200-tweaked.xml: Updated the download URLs.
+
 2003-04-07  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/Minolta-magicolor_2200_DL.xml opt/foo2zjs-ColorMode.xml,
